cmake_minimum_required(VERSION 3.3)
project(sar_fusion)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_PREFIX_PATH "/home/aurora/software/Qt5.3.2/5.3/gcc_64/")
find_package(Qt5Widgets REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")

set(SOURCE_FILES main.cpp mainwindow.cpp)

include_directories(/usr/local)
include_directories(/usr/local/include)
include_directories(/usr/local/include/opencv)
include_directories(/usr/local/include/opencv2)
add_executable(sar_fusion ${SOURCE_FILES})
target_link_libraries(${CMAKE_PROJECT_NAME} Qt5::Widgets)
target_link_libraries(${CMAKE_PROJECT_NAME} /usr/local/lib/libopencv_core.so)
target_link_libraries(${CMAKE_PROJECT_NAME} /usr/local/lib/libopencv_imgproc.so)
target_link_libraries(${CMAKE_PROJECT_NAME} /usr/local/lib/libopencv_highgui.so)
target_link_libraries(${CMAKE_PROJECT_NAME} /usr/local/lib/libopencv_ml.so)
target_link_libraries(${CMAKE_PROJECT_NAME} /usr/local/lib/libopencv_features2d.so)
